<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NBAScores</string>
    <string name="action_settings">Settings</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_game">Enter Game</string>
    <string name="next_game">Next Game</string>
    <string name="date">Date</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>

</resources>
